<resources><string name="app_name">MyXamarinApp</string><string name="action_settings">Settings</string><string name="getLocation">Get Location</string><string name="locationText">Your location is</string><string name="goToMap">View your position on the map</string><string name="retrieveLoc">Location Retrieving...</string><string name="ready">Operation completed</string><string name="todayLocations"><b>My todays location</b>s</string></resources>