
  <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="5dp" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"><Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/getLocation" android:text="@string/getLocation" android:textColor="@android:color/black" /><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/getLocation" android:orientation="vertical" android:layout_marginTop="10dp" android:visibility="gone" android:background="@drawable/customerborder" android:id="@+id/locationLayout"><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@android:color/black" android:textFontWeight="700" android:text="@string/locationText" android:textSize="25dp" android:gravity="center" /><TextView android:layout_marginTop="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@android:color/black" android:textFontWeight="bold" android:id="@+id/locationDisplayer" android:textAlignment="center" /><Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/goToMap" android:id="@+id/mapLauncher" android:layout_margin="5dp" android:textColor="@android:color/black" /></LinearLayout><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="150dp" android:layout_below="@+id/locationLayout" android:id="@+id/progessLayout" android:visibility="gone" android:orientation="vertical"><ProgressBar android:layout_width="match_parent" android:layout_height="wrap_content" android:foregroundGravity="center" android:layout_centerInParent="true" android:tooltipText="loading..." /><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/retrieveLoc" android:gravity="center" /></LinearLayout><Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/todayLocations" android:id="@+id/todayLocations" android:layout_below="@+id/locationLayout" /><ListView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/listLocation" android:layout_below="@+id/todayLocations" /></RelativeLayout>